--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,33 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "GW2 DPS Report KPs",
     "description": "This extension will show the killproofs of the current DPS Report",
-    "version": "0.1",
+    "version": "0.2",
     "icons": {
         "16": "/images/icon16.png",
         "32": "/images/icon32.png",
         "48": "/images/icon48.png",
         "128": "/images/icon128.png"
     },
-    "action": {
-        "default_popup": "popup.html",
+    "browser_action": {
         "default_icon": {
             "16": "/images/icon16.png",
             "32": "/images/icon32.png",
             "48": "/images/icon48.png",
             "128": "/images/icon128.png"
-        }
+        },
+        "default_popup": "popup.html"
     },
     "permissions": [
         "activeTab",
+        "https://killproof.me/*",
         "storage"
     ],
-    "host_permissions": [        
-        "https://killproof.me/*"
-    ],
     "background": {
-        "service_worker": "js/bg_page.js"
+        "scripts": [
+            "js/bg_page.js"
+        ],
+        "persistent": false
     },
     "content_scripts": [
         {
